--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,37 @@ a {
     width: 370px;
 }
 
+.section-post {
+    position: relative;
+}
+
+.section-post > .ovarlay {
+    
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+
+    background-color: rgba(47, 48, 58, 0.8);
+    opacity: 1;
+    width: 370px;
+    height: 70px;
+    align-items: center;
+    
+}
+
+.post-text {
+    flex-grow: 1;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--background-white);
+
+}
+
         /*Команда*/
 
 .team {
@@ -481,8 +512,8 @@ a {
     
 }
 
-.list-clients:hover,
-.list-clients:focus {
+.clients-link:hover,
+.clients-link:focus {
 
 border: 1px solid rgba(33, 150, 243, 1);
 
@@ -670,7 +701,7 @@ footer {
     border-color: transparent;
     cursor: pointer;
     
-    color: var(--title-text-color)
+    color: var(--title-text-color);
     background-color: var(--backgroung-button);
     font-weight: 500;
     font-size: 16px;
@@ -752,6 +783,49 @@ footer {
     line-height: 1.87;
     letter-spacing: 0.03em;
        
+}
+
+        /*Модалка*/
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 5;
+    top: 0;
+    left: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.2));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    opacity: 0;
+    /*pointer-events: none;
+    
+    transition: all 0.3s ease-in-out;
+    
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color:*/ 
+    outline: 5px solid blueviolet;
+}
+
+.modal {
+    display: flex;
+    position: absolute;
+    background-color: var(--background-white);
+    border-radius: 4px;
+    width: 528px;
+    height: 581px;
+    z-index: 10;
+    
+    outline: 5px solid red;
+
+}
+
+.close-btn {
+display: flex;
+outline: 5px solid tomato;
+
 }
 
 
