--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,10 @@ a {
 .link {
     
    color: var(--title-text-color);
+
+   transition-duration: 250ms;
+   transition-property: color;
+   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-link {
@@ -157,9 +161,48 @@ a {
     padding-bottom: 32px;
 }
 
+.logo-link.current::after {
+    content: "";
+
+    display: block;
+    margin-top: 28px;
+    height: 4px;
+    background-color: #2196F3;
+    border-radius: 2px;
+    opacity: 1;
+
+   
+}
+
+.logo-link::after {
+    content: "";
+
+    display: block;
+    margin-top: 28px;
+    height: 4px;
+    background-color: #2196F3;
+    border-radius: 2px;
+    opacity: 0;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+
+.logo-link:hover:after,
+.logo-link:focus:after {
+
+    opacity: 1;
+}
+
+
+
 .current {
     
     color: var(--background-blue);
+
 
 }
 
@@ -175,6 +218,10 @@ a {
     align-items: center;
     margin-right: 10px;
     stroke: var(--paragraph-text-color);
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-email:hover .box-email,
@@ -256,6 +303,10 @@ a {
     font-family: inherit;
     border-color: transparent;
     cursor: pointer;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -499,6 +550,10 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 
@@ -524,6 +579,10 @@ border: 1px solid rgba(33, 150, 243, 1);
 
    margin: 0;
    fill: #AFB1B8;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -543,6 +602,10 @@ border: 1px solid rgba(33, 150, 243, 1);
     width: 44px;
     height: 44px;
     border-radius: 50%;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
     
 }
@@ -561,12 +624,17 @@ border: 1px solid rgba(33, 150, 243, 1);
 .socials {
 
     fill: #AFB1B8;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
 
     background-color: var(--background-blue);
+
 }
 
 .social-link:hover .socials,
@@ -614,6 +682,10 @@ footer {
     line-height: 1.71;
     letter-spacing: 0.03em;
     font-style: normal;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -708,6 +780,10 @@ footer {
     line-height: 1.62;
     letter-spacing: 0.03em;
     font-family: inherit;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
        
 }
 
@@ -745,6 +821,10 @@ footer {
     margin: 0 30px 30px 0;
     border: 1px solid rgba(238, 238, 238, 1);
     background-color: rgba(255, 255, 255, 1);
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -785,48 +865,137 @@ footer {
        
 }
 
+.item-thumb {
+    position: relative;
+}
+
+.item-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    transform: translateY(100%);
+    opacity: 0;
+
+    width: 100%;
+    height: 100%;
+    padding: 63px 24px;
+    display: flex;
+    align-items: center;
+
+    background-color:rgba(33, 150, 243, 0.9);
+    backdrop-filter: blur(3px);
+
+    user-select: none;
+
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item:hover .item-overlay,
+.item:focus .item-overlay {
+    transform: translateY(0);
+    opacity: 1;
+
+    animation: bottom-to-top 250ms ease 200ms both;
+}
+
+
+
+.item-overlay-text {
+
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--primary-white-color);
+}
+
         /*Модалка*/
 
 .backdrop {
-    width: 100%;
-    height: 100%;
+   
     position: fixed;
-    z-index: 5;
     top: 0;
     left: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.2));
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    z-index: 100;
     
+    width: 100%;
+    height: 100%;
+    
+    background-color: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(2px);
+
+    transition: opasity 150ms linear;
+   
+
+}
+
+.backdrop.is-hidden {
     opacity: 0;
-    /*pointer-events: none;
-    
-    transition: all 0.3s ease-in-out;
-    
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color:*/ 
-    outline: 5px solid blueviolet;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+    opacity: 0;
+    transform: translateX(-50%) translateY(-50%);
+
 }
 
 .modal {
-    display: flex;
     position: absolute;
-    background-color: var(--background-white);
-    border-radius: 4px;
-    width: 528px;
-    height: 581px;
-    z-index: 10;
-    
-    outline: 5px solid red;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
 
+    width: 528px;
+    min-height: 581px;
+
+    background-color: var(--background-white);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    
+    transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-btn {
-display: flex;
-outline: 5px solid tomato;
+    position: absolute;
+    top: 8px;
+    right: 8px;
 
+    padding: 0;
+
+    width: 30px;
+    height: 30px;
+    background-color: var(--background-white);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    color: rgba(0, 0, 0, 1);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+        /*Animation*/
+
+@keyframes bottom-to-top {
+0% {
+    opacity: 0;
+    transform: translateY(20%);
+}
+50% {
+    opacity: 0.5;
+}
+100% {
+    opacity: 1;
+    transform: translateY(0);
+}
 }
 
 
-        
+    
