--- a/css/styles.css
+++ b/css/styles.css
@@ -551,20 +551,14 @@ a {
     align-items: center;
     justify-content: center;
 
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transform: transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 
 .clients-link:hover .logo-clients,
 .clients-link:focus .logo-clients {
 
-    fill: rgba(33, 150, 243, 1);
-    
-
-   
-    
+    fill: rgba(33, 150, 243, 1);   
 }
 
 .clients-link:hover,
@@ -580,9 +574,6 @@ border: 1px solid rgba(33, 150, 243, 1);
    margin: 0;
    fill: #AFB1B8;
 
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -603,9 +594,7 @@ border: 1px solid rgba(33, 150, 243, 1);
     height: 44px;
     border-radius: 50%;
 
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     
 }
@@ -625,9 +614,7 @@ border: 1px solid rgba(33, 150, 243, 1);
 
     fill: #AFB1B8;
 
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
 .social-link:hover,
@@ -782,7 +769,7 @@ footer {
     font-family: inherit;
 
     transition-duration: 250ms;
-    transition-property: color;
+    transition-property: color, background-color, box-shadow;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
        
 }
@@ -800,7 +787,6 @@ footer {
 
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-   
     color: var(--primary-white-color);
     background-color: var(--background-blue);
 
@@ -823,9 +809,13 @@ footer {
     background-color: rgba(255, 255, 255, 1);
 
     transition-duration: 250ms;
-    transition-property: color;
+    transition-property: color, background-color, box-shadow;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+.flex-element .item:nth-last-child(-n+3) {
+    margin-bottom: 0;
 }
 
 .flex-element .item:hover,
@@ -867,30 +857,38 @@ footer {
 
 .item-thumb {
     position: relative;
+    overflow: hidden;
 }
 
 .item-overlay {
-    position: absolute;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        color: var(--primary-white-color);
+        background-color: rgba(33, 150, 243, 0.9);
+        transform: translateY(100%);
+        opacity: 0;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /*position: absolute;
     top: 0;
     left: 0;
-
-    transform: translateY(100%);
-    opacity: 0;
 
     width: 100%;
     height: 100%;
     padding: 63px 24px;
     display: flex;
     align-items: center;
+    
+    color: var(--primary-white-color);
+    background-color: rgba(33, 150, 243, 0.9);
 
-    background-color:rgba(33, 150, 243, 0.9);
-    backdrop-filter: blur(3px);
-
-    user-select: none;
-
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
+    opacity: 0;
+    transition: transform 250ms ease-out cubic-bezier(0.4, 0, 0.2, 1);*/
+    
 }
 
 .item:hover .item-overlay,
@@ -898,25 +896,42 @@ footer {
     transform: translateY(0);
     opacity: 1;
 
-    animation: bottom-to-top 250ms ease 200ms both;
+    /*animation: bottom-to-top 250ms  200ms;
+
+    /*animation: top-to-bottom 1000ms ease 550ms both;*/
 }
 
-
-
 .item-overlay-text {
-
+    /*text-align: center;
+    /*text-transform: uppercase;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
+    letter-spacing: 0.03em;*/
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 322px;
+    font-size: 18px;
+    line-height: 1.56;
     letter-spacing: 0.03em;
-    color: var(--primary-white-color);
+    transform: translate(-50%, -50%);
+    
 }
 
         /*Модалка*/
 
 .backdrop {
-   
     position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+    /*position: fixed;
     top: 0;
     left: 0;
     z-index: 100;
@@ -925,27 +940,37 @@ footer {
     height: 100%;
     
     background-color: rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(2px);
-
-    transition: opasity 150ms linear;
-   
+    backdrop-filter: blur(2px);*/
 
 }
 
 .backdrop.is-hidden {
     opacity: 0;
-    visibility: hidden;
+    /*visibility: hidden;*/
     pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
+/*.backdrop.is-hidden .modal {
     opacity: 0;
     transform: translateX(-50%) translateY(-50%);
 
+}*/
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.1);
 }
 
 .modal {
+        
     position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 528px;
+    min-height: 581px;
+    padding: 15px;
+    background-color: var(--background-white);
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /*position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
@@ -955,12 +980,20 @@ footer {
 
     background-color: var(--background-white);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    border-radius: 4px;*/
+
 }
+
+/*.modal.modal-animation {
+    animation-name: swirl-in-fwd 0.6s both ease-out;
+}*/
+    
+    
+    /*transition-duration: 250ms;
+    transition-property: color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
+
+
 
 .close-btn {
     position: absolute;
@@ -984,18 +1017,42 @@ footer {
         /*Animation*/
 
 @keyframes bottom-to-top {
-0% {
-    opacity: 0;
-    transform: translateY(20%);
-}
-50% {
-    opacity: 0.5;
-}
-100% {
-    opacity: 1;
-    transform: translateY(0);
-}
+    0% {
+        opacity: 0;
+        transform: translateY(20%);
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
+/*@keyframes top-to-bottom {
+    0% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(0);
+    }
+}
+ /*@keyframes transform {
+    0% {
+            transform: translateY(0);
+        }
+    
+        100% {
+            transform: translateY(100%);
+        }
+ }*/
 
     
