--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-   
+    
     --title-text-color: #212121;
     --paragraph-text-color: #757575;
     --primary-white-color: #FFFFFF;
@@ -18,32 +18,38 @@ body {
     font-family: Roboto, sans-serif;
     font-style: normal;
     background-color: var(--background-white);
-   
+
 }
 
-h1,h2,h3,h4,h5,h6,p {
-    
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+
     margin: 0;
 }
 
 .container {
-    
+
     width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
-    margin-left:auto;
+    margin-left: auto;
     margin-right: auto;
-  
+
 }
 
 .page-header {
-    
+
     background-color: var(--background-white);
 
 }
-         
+
 .list {
-    
+
     display: flex;
     list-style: none;
     margin: 0;
@@ -52,19 +58,19 @@ h1,h2,h3,h4,h5,h6,p {
 }
 
 img {
-    
+
     display: block;
 }
 
-                 /*header*/
+/*header*/
 
 .page-header {
 
     border-bottom: 1px solid rgba(236, 236, 236, 1);
 }
-                
+
 .logo {
-    
+
     color: var(--logo-text-color);
     font-family: 'Raleway';
     font-weight: 700;
@@ -75,32 +81,32 @@ img {
 }
 
 .logo-hat {
-    
+
     padding-top: 24px;
     padding-bottom: 25px;
     margin-right: 93px;
-    
+
 }
 
 .logo-text {
-    
+
     color: var(--logo-black-color);
 }
 
 .logo:hover {
-    
+
     color: var(--logo-text-color);
 }
 
 .main-nav {
-    
+
     display: flex;
     align-items: baseline;
-    
+
 }
 
 .site-nav {
-    
+
     display: flex;
     justify-content: center;
 
@@ -108,18 +114,18 @@ img {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    
+
 }
 
 .site-nav .item:not(:last-child),
 .auth-nav .item:not(:last-child) {
-    
+
     margin-right: 50px;
 
 }
 
 .auth-nav {
-    
+
     align-items: baseline;
     margin-left: auto;
 
@@ -132,7 +138,7 @@ img {
 
 
 .auth-nav .link {
-   
+
     color: var(--paragraph-text-color);
 }
 
@@ -142,17 +148,15 @@ img {
 }
 
 a {
-    
+
     text-decoration: none;
 }
 
 .link {
-    
-   color: var(--title-text-color);
 
-   transition-duration: 250ms;
-   transition-property: color;
-   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: var(--title-text-color);
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-link {
@@ -163,70 +167,45 @@ a {
 
 .logo-link.current::after {
     content: "";
-
     display: block;
-    margin-top: 28px;
+    width: 100%;
     height: 4px;
     background-color: #2196F3;
     border-radius: 2px;
-    opacity: 1;
 
-   
-}
-
-.logo-link::after {
-    content: "";
-
-    display: block;
     margin-top: 28px;
-    height: 4px;
-    background-color: #2196F3;
-    border-radius: 2px;
-    opacity: 0;
-
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo-link:hover:after,
-.logo-link:focus:after {
-
-    opacity: 1;
+.logo-link.current:hover:after,
+.logo-link.current:focus:after {
+    transform: scaleX(1);
 }
-
-
 
 .current {
-    
     color: var(--background-blue);
-
-
 }
 
 .link:hover,
 .link:focus {
-    
+
     color: var(--logo-text-color);
 }
 
-.box-email, 
+.box-email,
 .box-phone {
 
     align-items: center;
     margin-right: 10px;
     stroke: var(--paragraph-text-color);
 
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .link-email:hover .box-email,
 .link-email:focus .box-email {
- 
+
     stroke: var(--background-blue);
     stroke-width: 5px;
 }
@@ -236,32 +215,32 @@ a {
 
     stroke: var(--background-blue);
     stroke-width: 5px;
-    
+
 }
 
 
-        /*hero*/
+/*hero*/
 
 .hero {
-    
+
     padding-top: 200px;
     padding-bottom: 200px;
 
     background-color: var(--background-black);
-    
+
     max-width: 1600px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Img.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
-    
+
 }
 
-   
-.hero-box{ 
-    
-    margin-left:auto;
+
+.hero-box {
+
+    margin-left: auto;
     margin-right: auto;
     width: 696px;
 
@@ -272,15 +251,15 @@ a {
     margin-bottom: 30px;
     margin-left: auto;
     margin-right: auto;
-    
-    color: var(--primary-white-color); 
+
+    color: var(--primary-white-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
     text-align: center;
     text-transform: uppercase;
-   
+
 }
 
 .hero-button {
@@ -292,7 +271,7 @@ a {
     min-height: 50px;
     margin-left: auto;
     margin-right: auto;
-    
+
     color: var(--primary-white-color);
     background-color: var(--background-blue);
     font-weight: 700;
@@ -304,39 +283,38 @@ a {
     border-color: transparent;
     cursor: pointer;
 
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
-    
+
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: #188CE8;
 
 }
-    
-        /*Принципи*/
+
+/*Принципи*/
 
 .section {
-   
+
     padding-top: 94px;
     padding-bottom: 94px;
-      
+
 }
 
 
 .list .section-box {
-    
+
     width: 270px;
     margin-right: 30px;
 
-    
+
 }
 
 .section-box:last-child {
-    
+
     margin-right: 0;
 }
 
@@ -347,7 +325,7 @@ a {
     background-image: linear-gradient(rgba(245, 244, 250, 1), rgba(245, 244, 250, 1));
     border-radius: 4px;
 
-   
+
 }
 
 .icons {
@@ -366,13 +344,13 @@ a {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    
+
 }
 
 .section-text {
 
     margin-top: 10px;
-   
+
     color: var(--paragraph-text-color);
     font-weight: 400;
     font-size: 14px;
@@ -382,31 +360,31 @@ a {
 }
 
 
-        
-        /*Приклади*/
+
+/*Приклади*/
 
 .post {
 
     padding-bottom: 94px;
-    
-    background-color: var(--background-white);   
+
+    background-color: var(--background-white);
 }
 
 .post .post-title {
-    
+
     margin-bottom: 50px;
-    
+
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-align: center;
-  
+
 }
 
 .post-photo {
-    
+
     display: block;
     justify-content: space-between;
     width: 370px;
@@ -416,8 +394,8 @@ a {
     position: relative;
 }
 
-.section-post > .ovarlay {
-    
+.section-post>.ovarlay {
+
     display: flex;
     position: absolute;
     bottom: 0;
@@ -428,7 +406,7 @@ a {
     width: 370px;
     height: 70px;
     align-items: center;
-    
+
 }
 
 .post-text {
@@ -443,14 +421,14 @@ a {
 
 }
 
-        /*Команда*/
+/*Команда*/
 
 .team {
 
     padding-top: 94px;
     padding-bottom: 94px;
 
-   background-color: var(--background-beige);
+    background-color: var(--background-beige);
 
 }
 
@@ -459,8 +437,8 @@ a {
     text-align: center;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+
     background-color: var(--background-white);
     width: 270px;
 }
@@ -513,7 +491,63 @@ a {
 
 }
 
-        /*Клієнти*/
+.social-icon {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 16px;
+}
+
+.social-link {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.social-link:hover,
+.social-link:focus {
+
+    background-color: var(--background-blue);
+
+}
+
+.list-icons {
+
+    margin-right: 10px;
+
+}
+
+.list-icons:last-child {
+
+    margin-right: 0;
+}
+
+.socials {
+
+    fill: #AFB1B8;
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+.social-link:hover .socials,
+.social-link:focus .socials {
+
+    fill: var(--background-white);
+
+}
+
+/*Клієнти*/
 
 .clients {
 
@@ -538,7 +572,7 @@ a {
     justify-content: center;
     gap: 30px;
 
-    
+
 }
 
 .clients-link {
@@ -551,88 +585,36 @@ a {
     align-items: center;
     justify-content: center;
 
-    transform: transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .clients-link:hover .logo-clients,
 .clients-link:focus .logo-clients {
 
-    fill: rgba(33, 150, 243, 1);   
+    fill: rgba(33, 150, 243, 1);
 }
 
 .clients-link:hover,
 .clients-link:focus {
 
-border: 1px solid rgba(33, 150, 243, 1);
+    border: 1px solid rgba(33, 150, 243, 1);
 
 }
 
 
 .logo-clients {
 
-   margin: 0;
-   fill: #AFB1B8;
-
-}
-
-.social-icon {
-
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   gap: 10px;
-   margin-top: 16px;
-}
-
-.social-link {
-   
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-
-    transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-    
-}
-
-.list-icons {
-
-    margin-right: 10px;
-
-}
-
-.list-icons:last-child {
-
-    margin-right: 0;
-}
-
-.socials {
-
+    margin: 0;
     fill: #AFB1B8;
 
-   
-}
-
-.social-link:hover,
-.social-link:focus {
-
-    background-color: var(--background-blue);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-.social-link:hover .socials,
-.social-link:focus .socials {
-
-    fill: var(--background-white);
-   
-}
 
 
-        /*Футер*/
+/*Футер*/
 
 footer {
 
@@ -644,13 +626,13 @@ footer {
 
 .basement {
 
-    
+
     padding-top: 60px;
     padding-bottom: 60px;
 }
 
 .basement-box {
-    
+
     display: flex;
 
 }
@@ -670,15 +652,13 @@ footer {
     letter-spacing: 0.03em;
     font-style: normal;
 
-    transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .basement .link:hover,
 .basement .link:focus {
-    
+
     color: var(--logo-text-color);
 
 }
@@ -686,35 +666,42 @@ footer {
 
 
 .logo-footer {
-    
-    margin-bottom:20px;
+
+    margin-bottom: 20px;
     display: block;
 }
 
 
 
-.link.address{
-    
+.link.address {
+
     display: block;
     margin-top: 9px;
     color: rgba(255, 255, 255, 0.6);
-    
-} 
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link.address:hover,
+.link.address:focus {
+
+    color: var(--logo-text-color);
+}
 
 
 .basement .logo-text {
-    
+
     color: var(--primary-white-color);
 }
 
 .social-basement {
 
     display: inline-block;
-    
+
 }
 
 .social-title {
-    
+
     font-weight: 700;
     font-size: 14px;
     line-height: 16px;
@@ -734,7 +721,7 @@ footer {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     margin-right: 10px;
-} 
+}
 
 .social-list .list-icons-basement:last-child {
 
@@ -743,23 +730,23 @@ footer {
 
 
 
-        /*Портфоліо*/
+/*Портфоліо*/
 
 .portfolio {
 
     padding-top: 94px;
     padding-bottom: 94px;
-    
+
 }
 
 .portfolio-button {
-   
+
     padding: 6px 22px;
     background-color: rgba(245, 244, 250, 1);
     border-radius: 4px;
     border-color: transparent;
     cursor: pointer;
-    
+
     color: var(--title-text-color);
     background-color: var(--backgroung-button);
     font-weight: 500;
@@ -768,10 +755,7 @@ footer {
     letter-spacing: 0.03em;
     font-family: inherit;
 
-    transition-duration: 250ms;
-    transition-property: color, background-color, box-shadow;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-       
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn {
@@ -793,24 +777,22 @@ footer {
 }
 
 .flex-element {
-    
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    
+
 
 }
 
 .flex-element .item {
-    
+
     width: 370px;
     margin: 0 30px 30px 0;
     border: 1px solid rgba(238, 238, 238, 1);
     background-color: rgba(255, 255, 255, 1);
 
-    transition-duration: 250ms;
-    transition-property: color, background-color, box-shadow;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -834,10 +816,11 @@ footer {
     padding: 20px 24px;
 
 }
+
 .portfolio-title {
 
     margin-bottom: 4px;
-    
+
     color: var(--title-text-color);
     font-weight: 700;
     font-size: 18px;
@@ -852,7 +835,7 @@ footer {
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
-       
+
 }
 
 .item-thumb {
@@ -861,34 +844,16 @@ footer {
 }
 
 .item-overlay {
-
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        color: var(--primary-white-color);
-        background-color: rgba(33, 150, 243, 0.9);
-        transform: translateY(100%);
-        opacity: 0;
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /*position: absolute;
+    position: absolute;
     top: 0;
     left: 0;
-
     width: 100%;
     height: 100%;
-    padding: 63px 24px;
-    display: flex;
-    align-items: center;
-    
-    color: var(--primary-white-color);
-    background-color: rgba(33, 150, 243, 0.9);
+    background-color: var(--background-blue);
+    opacity: 0;
 
     transform: translateY(100%);
-    opacity: 0;
-    transition: transform 250ms ease-out cubic-bezier(0.4, 0, 0.2, 1);*/
-    
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .item:hover .item-overlay,
@@ -896,30 +861,18 @@ footer {
     transform: translateY(0);
     opacity: 1;
 
-    /*animation: bottom-to-top 250ms  200ms;
-
-    /*animation: top-to-bottom 1000ms ease 550ms both;*/
 }
 
 .item-overlay-text {
-    /*text-align: center;
-    /*text-transform: uppercase;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
-    letter-spacing: 0.03em;*/
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 322px;
-    font-size: 18px;
-    line-height: 1.56;
     letter-spacing: 0.03em;
-    transform: translate(-50%, -50%);
-    
+    color: var(--primary-white-color);
+    margin: 63px 24px;
 }
 
-        /*Модалка*/
+/*Модалка*/
 
 .backdrop {
     position: fixed;
@@ -928,39 +881,24 @@ footer {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
-    /*position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    
-    width: 100%;
-    height: 100%;
-    
-    background-color: rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(2px);*/
-
 }
 
 .backdrop.is-hidden {
     opacity: 0;
-    /*visibility: hidden;*/
     pointer-events: none;
 }
 
-/*.backdrop.is-hidden .modal {
-    opacity: 0;
-    transform: translateX(-50%) translateY(-50%);
-
-}*/
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(1.1);
+
 }
 
+
 .modal {
-        
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -968,32 +906,12 @@ footer {
     min-height: 581px;
     padding: 15px;
     background-color: var(--background-white);
+
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /*position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
 
-    width: 528px;
-    min-height: 581px;
-
-    background-color: var(--background-white);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;*/
 
 }
-
-/*.modal.modal-animation {
-    animation-name: swirl-in-fwd 0.6s both ease-out;
-}*/
-    
-    
-    /*transition-duration: 250ms;
-    transition-property: color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);*/
-
-
 
 .close-btn {
     position: absolute;
@@ -1013,46 +931,3 @@ footer {
     align-items: center;
     justify-content: center;
 }
-
-        /*Animation*/
-
-@keyframes bottom-to-top {
-    0% {
-        opacity: 0;
-        transform: translateY(20%);
-    }
-    50% {
-        opacity: 0.5;
-    }
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-/*@keyframes top-to-bottom {
-    0% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-
-    50% {
-        opacity: 0.5;
-    }
-
-    100% {
-        opacity: 0;
-        transform: translateY(0);
-    }
-}
- /*@keyframes transform {
-    0% {
-            transform: translateY(0);
-        }
-    
-        100% {
-            transform: translateY(100%);
-        }
- }*/
-
-    
