--- a/css/styles.css
+++ b/css/styles.css
@@ -888,7 +888,7 @@ footer {
 
 .backdrop.is-hidden {
     opacity: 0;
-    visibility: hidden;
+    visibility: visible;
     pointer-events: none;
 }
 
